feat: Se cambio el plugin toats por toastr y

--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="node_modules/jquery-toast-plugin/dist/jquery.toast.min.css">
+    <link rel="stylesheet" href="node_modules/toastr/build/toastr.css">
     <link rel="stylesheet" href="node_modules/sweetalert2/dist/sweetalert2.min.css">
 </head>
+
 <body>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="node_modules/handlebars/dist/handlebars.js"></script>
     <script src="node_modules/jquery-toast-plugin/dist/jquery.toast.min.js"></script>
+    <script src="node_modules/toastr/build/toastr.min.js"></script>
     <script src="node_modules/sweetalert2/dist/sweetalert2.js"></script>
     <script src="src/jquery.basic_messages.js"></script>
 
     <script>
         $(function () {
-    
-            $.BasicMessage.init().flash("success", [
-                "Error numero 1",
-                "Error numero 2",
-                "Error numero 3"
+
+            $.BasicMessage.init(
+                {
+                    success: {
+                        plugin: 'toast',
+                        options: {
+                            title: "¡Exito!"
+                        }
+                    },
+                    error: {
+                        plugin: 'sweetalert',
+                        options: {
+                            title: "¡Error!"
+                        }
+                    }
+                }
+            ).flash("success", [
+                "Mensaje de exito 1",
             ]);
 
-
-            $.BasicMessage.warning([
-                "Error numero 1",
-                "Error numero 2",
-                "Error numero 3"
-            ]);
+            $.BasicMessage.error(["Este es un mensaje de error"]);
+            //$.BasicMessage.info(["Este es un mensaje Informativo"]);
+            //$.BasicMessage.warning(["Este es un mensaje de alerta"]);
         });
     </script>
 </body>
+
 </html>
